<resources>
    <string name="app_name">ArmadilLogin</string>
    <string name="title_home">Login</string>
    <string name="title_help">Hilfe</string>
    <string name="help_accessibility_label">Hilfe-Tab</string>
    <string name="title_settings">Einstellungen</string>
    <string name="welcome_title">Willkommen!</string>
    <string name="welcome_accessibility_label">Neue Seite: Willkommen</string>
    <string name="welcome_explanation">Vielen Dank für Ihre Teilnahme an dieser Studie. Diese App soll dabei helfen, zu ermitteln, wie ein einfaches, komfortables und trotzdem sicheres Login-System für alle aussehen könnte.</string>
    <string name="welcome_start">Starten</string>
    <string name="register_login_title">Registrieren oder einloggen?</string>
    <string name="register_login_accessibility_label">Neue Seite: Auswahl zwischen Registrierung und Login</string>
    <string name="register_login_explanation">Möchten Sie  ein neues Konto anlegen oder sich mit einem Zugang einloggen, der bereits erstellt wurde?</string>
    <string name="register_login_registerbutton">Registrieren</string>
    <string name="register_login_loginbutton">Login</string>
    <string name="register_title">Wer sind Sie?</string>
    <string name="register_accessibility_label">Neue Seite: Persönliche Angaben zur Registrierung</string>
    <string name="register_explanation">Bitte tragen Sie in die nachfolgenden Felder Ihren Vornamen, Nachnamen und Ihre E-Mail-Adresse ein. Um die Felder auszufüllen, tippen Sie sie an.</string>
    <string name="register_registerbutton">Registrieren</string>
    <string name="register_firstname">Vorname</string>
    <string name="register_lastname">Nachname</string>
    <string name="register_input_firstname_hint">z.B. Max</string>
    <string name="register_input_lastname_hint">z.B. Mustermann</string>
    <string name="register_email">E-Mail-Adresse</string>
    <string name="register_input_email_hint">z.B. max.mustermann@tu-chemnitz.de</string>
    <string name="register_button_next">Weiter</string>
    <string name="register_username_title">Wie soll Ihr neues Konto heißen?</string>
    <string name="register_username_accessibility_label">Neue Seite: Benutzername erstellen</string>
    <string name="register_username_explanation">Das wird der Benutzername sein, mit dem Sie sich später wieder einloggen können, um in Ihren persönlichen Mitgliederbereich zu gelangen. Merken Sie sich ihn also gut oder schreiben Sie ihn auf.</string>
    <string name="register_input_username">Benutzername</string>
    <string name="login_title">Wie heißt Ihr Konto?</string>
    <string name="login_accessibility_label">Neue Seite: Einloggen</string>
    <string name="login_explanation">Willkommen zurück! Bitte geben Sie im nachfolgenden Feld Ihren Benutzernamen ein, den Sie bei der Registrierung angelegt haben.</string>
    <string name="login_input_username">Benutzername</string>
    <string name="login_button_next">Weiter</string>
    <string name="register">Registrierung</string>
    <string name="login">Login</string>
    <string name="simple_string_error">Bitte füllen Sie dieses Feld aus</string>
    <string name="not_alphanumeric_string_error">Bitte verwenden Sie nur Buchstaben und Zahlen.</string>
    <string name="email_string_error">Keine gültige E-Mail-Adresse</string>
    <string name="register_summary_title">Stimmt alles so?</string>
    <string name="register_summary_accessibility_label">Neue Seite: Überprüfen Sie Ihre Angaben</string>
    <string name="register_summary_explanation">Hier werden Ihnen noch einmal Ihre Eingaben angezeigt. Bitte überprüfen Sie, ob alles korrekt ist.</string>
    <string name="register_summary_name">Ihr Name lautet:</string>
    <string name="register_summary_email">Ihre E-Mail-Adresse lautet:</string>
    <string name="register_summary_username">Ihr neuer Benutzername lautet:</string>
    <string name="register_summary_correct">Bestätigen</string>
    <string name="register_summary_not_correct">Berichtigen</string>
    <string name="register_key_title">Noch ein letzter Schritt</string>
    <string name="register_key_accessibility_label">Neue Seite: Einen Schlüssel registrieren.</string>
    <string name="register_key_explanation">Damit nur Sie sich in Ihren Mitgliederbereich einloggen können, muss die App in Zukunft Ihre Identität bestätigen können. Dafür müssen Sie sich kein kompliziertes Passwort merken, sondern nur eine Art Schlüssel bei sich tragen. Je nach Art des Schlüssels, legen Sie ihn auf die Rückseite Ihres Telefons auf oder stecken ihn in dessen Ladebuchse. Alternativ können Sie auch Ihr Smartphone selbst als Schlüssel verwenden. Innerhalb von Sekundenbruchteilen sind Sie dann angemeldet. Weitere Infos finden Sie im "Hilfe"-Tab der App.</string>
    <string name="register_key_confirm">Los Geht\'s!</string>
    <string name="register_summary_sending_username">Benutzername wird an Server gesendet.</string>
    <string name="register_key_cancelled">Abgebrochen!</string>
    <string name="register_finished_title">Erfolgreich registriert</string>
    <string name="register_finished_accessibility_label">Neue Seite: Registrierung erfolgreich abgeschlossen</string>
    <string name="register_finished_explanation">Sie haben sich erfolgreich registriert. Drücken Sie den Knopf unten, um zum Start zurückzukehren und sich einzuloggen.</string>
    <string name="register_finished_label">Registrierung abgeschlossen</string>
    <string name="register_finished_to_start">Zurück zum Start</string>
    <string name="register_error_title">Registrieren gescheitert</string>
    <string name="register_error_label">Registrieren fehlgeschlagen</string>
    <string name="register_error_accessibility_label">Neue Seite: Registrierung fehlgeschlagen</string>
    <string name="register_error_to_start">Zurück zum Start</string>
    <string name="register_error_try_again">Erneut versuchen</string>
    <string name="register_error_explanation">Es gab einen Fehler bei der Registrierung Ihres Schlüssels. Das kann unterschiedliche Gründe haben. Bitte informieren Sie sich dazu im "Hilfe"-Tab.</string>
    <string name="signin_key_cancelled">Abgebrochen!</string>
    <string name="login_key_label">Login</string>
    <string name="login_key_accessibility_label">Neue Seite: Einloggen mit Ihrem Schlüssel</string>
    <string name="login_key_title">Mit Ihrem Schlüssel einloggen.</string>
    <string name="login_key_explanation">Betätigen Sie den Knopf unten, um sich mit Ihrem Schlüssel in Ihren Mitgliederbereich einzuloggen. Sie kennen diesen Prozess bereits vom Registrieren. Mehr Informationen dazu, wie Sie sich mit Ihrem Schlüssel einloggen, finden Sie im "Hilfe"-Tab.</string>
    <string name="login_key_confirm">Los geht\'s!</string>
    <string name="user_overview_title">Willkommen %s!</string>
    <string name="user_overview_explanation">Willkommen im Mitgliederbereich! Vielen Dank, dass Sie an der Studie teilgenommen haben. Tippen Sie auf die Schaltfläche unten, um die Teilnahme abzuschließen und Ihre benötigte Zeit, sowie Ihre Angaben zu Alter, Geschlecht und technischer Erfahrung abzuschicken.</string>
    <string name="user_overview_time_title">Ihre benötigte Zeit für die Registrierung und den Login:</string>
    <string name="user_overview_register_time_title">Ihre benötigte Zeit für die Registrierung des Schlüssels:</string>
    <string name="user_overview_login_time_title">Ihre benötigte Zeit für das Einloggen mit dem Schlüssel:</string>
    <string name="user_overview_finish_study">Studie abschließen</string>
    <string name="user_overview_data_sent_success">Daten erfolgreich gesendet!</string>
    <string name="user_overview_data_sent_error">Fehler beim Senden der Daten!</string>
    <string name="user_overview_label">Übersicht</string>
    <string name="user_overview_accessibility_label">Neue Seite: Mitgliederbereich</string>
    <string name="user_overview_credential_title">Ihre registrierten Schlüssel</string>
    <string name="user_overview_credential_explanation">In dieser Übersicht finden Sie all Ihre registrierten Schlüssel. Bei realen Anwendungszwecken ist es sinnvoll, mindestens zwei Schlüssel zu registrieren, falls einer verloren geht.</string>
    <string name="user_overview_delete_credential">Schlüssel löschen</string>
    <string name="user_overview_credential_placeholder">Noch keine Schlüssel registriert.</string>
    <string name="user_overview_delete_credential_confirmation">Sind Sie sich sicher, dass Sie den Schlüssel mit folgender ID löschen möchten?\n%s</string>
    <string name="item_credential_id_title">Schlüssel-ID:</string>
    <string name="item_credential_publickey_title">Öffentlicher Schlüssel:</string>
    <string name="settings_title">Einstellungen</string>
    <string name="settings_accessibility_label">Einstellungs-Tab</string>
    <string name="settings_explanation">In dieser Ansicht können Sie diverse Einstellungen vornehmen. So können das Farbschema und die Schriftart hier eingestellt werden.</string>
    <string name="settings_font_title">Schriftart</string>
    <string name="settings_set_dyslexic_font">Legastheniker-Schriftart</string>
    <string name="settings_color_title">Farben</string>
    <string name="settings_color_light">Heller Modus</string>
    <string name="settings_color_dark">Dunkler Modus</string>
    <string name="settings_color_system">Farbe an das System anpassen</string>
    <string name="settings_color_description">Farbe der App anpassen</string>
    <string name="user_data_label">Ihre Angaben</string>
    <string name="user_data_accessibility_label">Neue Seite: Angaben zu Ihrer Person</string>
    <string name="user_data_title">Bevor Sie fortfahren...</string>
    <string name="user_data_explanation">Um wertvolle Erkenntnisse aus der Studie zu gewinnen, ist es hilfreich, die Teilnehmer möglichst genau einschätzen zu können. Daher bitte ich Sie, die nachfolgenden Fragen zu beantworten. Sie haben allerdings die freie Wahl, welche Angaben Sie machen möchten und welche nicht. Möchten Sie sich zu einer Frage nicht äußern, wählen Sie als Antwort entweder \"keine Angabe\" aus oder lassen Sie das entsprechende Textfeld leer. Alle Angaben werden anonymisiert gespeichert und können daher im Nachhinein nicht mehr mit Ihnen als Person in Verbindung gebracht werden. Während der Studie wird außerdem die Zeit gemessen, die Sie zum Registrieren und Einloggen benötigt haben. Lassen Sie sich davon nicht aus der Ruhe bringen, es geht vorwiegend darum, wie gut sich das Anmeldesystem bedienen lässt.\nVielen Dank!</string>
    <string name="user_data_age_title">Wie alt sind Sie?</string>
    <string name="user_data_input_age">Ihr Alter, z.B. 42</string>
    <string name="user_data_gender_title">Mit welchem Geschlecht identifizieren Sie sich?</string>
    <string name="user_data_gender_description">Geschlecht: </string>
    <string name="user_data_gender_female">weiblich</string>
    <string name="user_data_gender_male">männlich</string>
    <string name="user_data_gender_diverse">divers</string>
    <string name="user_data_gender_not_specified">Keine Angabe.</string>
    <string name="user_data_technical_experience_title">Wie würden Sie Ihre Erfahrung mit Technik einschätzen?</string>
    <string name="user_data_technical_experience_explanation">Hierbei ist speziell Ihre Erfahrung und Fertigkeit mit mobilen Geräten wie Smartphones oder Tablets gemeint.</string>
    <string name="user_data_technical_experience_frequency_title"><b>Wie oft verwenden Sie Ihr Smartphone?</b></string>
    <string name="user_data_technical_experience_frequency_description">Smartphone Nutzungshäufigkeit: Option </string>
    <string name="user_data_technical_experience_1"><b>1</b> - ich besitze kein Smartphone</string>
    <string name="user_data_technical_experience_2"><b>2</b> - ich nutze mein Smartphone einmal in der Woche oder seltener</string>
</resources>