<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegisterFragment">

    <data>

        <variable
            name="registerFragment"
            type="de.tuchemnitz.armadillogin.ui.register.RegisterFragment" />

        <variable
            name="armadilloViewModel"
            type="de.tuchemnitz.armadillogin.model.ArmadilloViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/textview_register_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_title"
                android:textAppearance="@style/TextAppearance.StandardTypographyStyles.Headline3"
                app:headlineDyslexicEnabled="@{armadilloViewModel.dyslexicFont}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_register_explanation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/register_explanation"
                android:textAppearance="@style/TextAppearance.StandardTypographyStyles.Body1"
                app:bodyDyslexicEnabled="@{armadilloViewModel.dyslexicFont}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_register_title" />

            <TextView
                android:id="@+id/textview_register_firstname"
                android:labelFor="@id/register_input_firstname_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/register_firstname"
                android:textAppearance="@style/TextAppearance.StandardTypographyStyles.Headline4"
                app:layout_constraintStart_toStartOf="@id/textview_register_explanation"
                app:layout_constraintTop_toBottomOf="@id/textview_register_explanation"
                app:subHeadlineDyslexicEnabled="@{armadilloViewModel.dyslexicFont}" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_textinput_firstname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/register_input_firstname_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/textview_register_firstname"
                app:layout_constraintTop_toBottomOf="@id/textview_register_firstname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_input_firstname_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textAppearance="@style/TextAppearance.StandardTypographyStyles.Body1"
                    app:bodyDyslexicEnabled="@{armadilloViewModel.dyslexicFont}" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textview_register_lastname"
                android:labelFor="@id/register_input_lastname_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/register_lastname"
                android:textAppearance="@style/TextAppearance.StandardTypographyStyles.Headline4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_textinput_firstname"
                app:subHeadlineDyslexicEnabled="@{armadilloViewModel.dyslexicFont}" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_textinput_lastname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/register_input_lastname_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/textview_register_lastname"
                app:layout_constraintTop_toBottomOf="@id/textview_register_lastname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_input_lastname_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textAppearance="@style/TextAppearance.StandardTypographyStyles.Body1"
                    app:bodyDyslexicEnabled="@{armadilloViewModel.dyslexicFont}" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textview_register_email"
                android:labelFor="@id/register_input_email_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/register_email"
                android:textAppearance="@style/TextAppearance.StandardTypographyStyles.Headline4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_textinput_lastname"
                app:subHeadlineDyslexicEnabled="@{armadilloViewModel.dyslexicFont}" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_textinput_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/register_input_email_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textview_register_email"
                app:layout_constraintTop_toBottomOf="@+id/textview_register_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_input_email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textAppearance="@style/TextAppearance.StandardTypographyStyles.Body1"
                    app:bodyDyslexicEnabled="@{armadilloViewModel.dyslexicFont}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/register_button_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> registerFragment.goToNextView()}"
                android:text="@string/register_button_next"
                app:drawableRightCompat="@drawable/ic_baseline_navigate_next_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_textinput_email" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>