<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegisterLoginFragment">

    <data>

        <variable
            name="registerLoginFragment"
            type="de.tuchemnitz.armadillogin.ui.registerlogin.RegisterLoginFragment" />

        <variable
            name="armadilloViewModel"
            type="de.tuchemnitz.armadillogin.model.ArmadilloViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/textview_register_login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_login_title"
                android:textAppearance="@style/TextAppearance.StandardTypographyStyles.Headline3"
                app:headlineDyslexicEnabled="@{armadilloViewModel.dyslexicFont}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_register_login_explanation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/register_login_explanation"
                android:textAppearance="@style/TextAppearance.StandardTypographyStyles.Body1"
                app:bodyDyslexicEnabled="@{armadilloViewModel.dyslexicFont}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_register_login_title" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> registerLoginFragment.goToRegisterFragment()}"
                android:text="@string/register_login_registerbutton"
                app:drawableLeftCompat="@drawable/ic_drawable_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_register_login_explanation" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> registerLoginFragment.goToLoginFragment()}"
                android:text="@string/register_login_loginbutton"
                app:drawableLeftCompat="@drawable/ic_baseline_login_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>