<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SettingFragment">

    <data>

        <variable
            name="settingFragment"
            type="de.tuchemnitz.armadillogin.ui.settings.SettingFragment" />

        <variable
            name="armadilloViewModel"
            type="de.tuchemnitz.armadillogin.model.ArmadilloViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/textview_settings_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_title"
                android:textAppearance="@style/TextAppearance.StandardTypographyStyles.Headline3"
                app:headlineDyslexicEnabled="@{armadilloViewModel.dyslexicFont}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_settings_explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/settings_explanation"
                android:textAppearance="@style/TextAppearance.StandardTypographyStyles.Body1"
                app:bodyDyslexicEnabled="@{armadilloViewModel.dyslexicFont}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_settings_title" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_settings_font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_settings_explanation">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp">

                    <TextView
                        android:id="@+id/textview_settings_font_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_font_title"
                        android:textAppearance="@style/TextAppearance.StandardTypographyStyles.Headline6"
                        app:bigBodyDyslexicEnabled="@{armadilloViewModel.dyslexicFont}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switch_settings_change_font"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:checked="false"
                        android:text="@string/settings_set_dyslexic_font"
                        android:textAppearance="@style/TextAppearance.StandardTypographyStyles.Body1"
                        app:bodyDyslexicEnabled="@{armadilloViewModel.dyslexicFont}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textview_settings_font_title" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardview_settings_font">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp">

                    <TextView
                        android:id="@+id/textview_settings_color_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_color_title"
                        android:textAppearance="@style/TextAppearance.StandardTypographyStyles.Headline6"
                        app:bigBodyDyslexicEnabled="@{armadilloViewModel.dyslexicFont}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioGroup
                        android:id="@+id/radiogroup_settings_color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textview_settings_color_title">

                        <RadioButton
                            android:id="@+id/radiobutton_settings_light"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="@{armadilloViewModel.colorMode.equals(0)}"
                            android:onClick="@{() -> armadilloViewModel.setColorMode(0)}"
                            android:text="@string/settings_color_light"
                            android:textAppearance="@style/TextAppearance.StandardTypographyStyles.Body1"
                            app:bodyDyslexicEnabled="@{armadilloViewModel.dyslexicFont}" />

                        <RadioButton
                            android:id="@+id/radiobutton_settings_dark"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="@{armadilloViewModel.colorMode.equals(1)}"
                            android:onClick="@{() -> armadilloViewModel.setColorMode(1)}"
                            android:text="@string/settings_color_dark"
                            android:textAppearance="@style/TextAppearance.StandardTypographyStyles.Body1"
                            app:bodyDyslexicEnabled="@{armadilloViewModel.dyslexicFont}" />

                        <RadioButton
                            android:id="@+id/radiobutton_settings_system"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="@{armadilloViewModel.colorMode.equals(2)}"
                            android:onClick="@{() -> armadilloViewModel.setColorMode(2)}"
                            android:text="@string/settings_color_system"
                            android:textAppearance="@style/TextAppearance.StandardTypographyStyles.Body1"
                            app:bodyDyslexicEnabled="@{armadilloViewModel.dyslexicFont}" />
                    </RadioGroup>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>